--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,9 @@
-language: none
+language: python
 
-services:
-    - python
+python:
+    - 3.1
+    - 3.2
+    - pypy
 
 
 build:
@@ -14,6 +16,7 @@ build:
   ci:
       - python3.1 -V
       - python3.2 -V
+      - python --version
 
 
 
