--- a/shippable.yml
+++ b/shippable.yml
@@ -1,9 +1,19 @@
 language: python
 
 python:
-    - 3.1
-    - 3.2
-    - pypy
+  - 2.3 #2.3.7
+  - 2.4 #2.4.6
+  - 2.5 #2.5.6
+  - 2.6 #2.6.9
+  - 2.7 #2.7.12
+  - 3.1 #3.1.5
+  - 3.2 #3.2.6
+  - 3.4 #3.4.8
+  - 3.5 #3.5.2
+  - 3.6 #3.6.5
+  - 3.7 #3.7.0
+  - pypy #5.10.0
+  - pypy3 #5.10.1
 
 
 build:
@@ -14,10 +24,8 @@ build:
     
     
   ci:
-      - python3.1 -V
-      - python3.2 -V
-      - python --version
-
-
-
-
+    - python3.1 -V
+    - python3.2 -V
+    - python --version
+    - pip --version #8.1.2
+    - virtualenv --version #15.1.0
