--- a/shippable.yml
+++ b/shippable.yml
@@ -1,31 +1,24 @@
-language: python
-
-python:
-  - 2.3 #2.3.7
-  - 2.4 #2.4.6
-  - 2.5 #2.5.6
-  - 2.6 #2.6.9
-  - 2.7 #2.7.12
-  - 3.1 #3.1.5
-  - 3.2 #3.2.6
-  - 3.4 #3.4.8
-  - 3.5 #3.5.2
-  - 3.6 #3.6.5
-  - 3.7 #3.7.0
-  - pypy #5.10.0
-  - pypy3 #5.10.1
-
-
-build:
-  pre_ci_boot:
-    image_name: ranjansingh/python
-    image_tag: latest
-    pull: true
-    
-    
-  ci:
-    - python3.1 -V
-    - python3.2 -V
-    - python --version
-    - pip --version #8.1.2
-    - virtualenv --version #15.1.0
+jobs:
+  - name: u16python-test
+    type: runSh
+    steps:
+      - IN: u14all-testing
+      - TASK:
+          runtime:
+            options:
+              imageName: "drydock/u16pytall"
+              imageTag: master
+          script:
+             - python --version
+             - python2.3 -V
+             - python2.4 -V
+             - python2.5 -V
+             - python2.6 -V
+             - python2.7 -V
+             - python3.1 -V
+             - python3.2 -V
+             - python3.4 -V
+             - python3.5 -V
+             - python3.6 -V
+             - python3.7 -V
+             - pip --version
